tests/baselines/reference/ParameterList4.errors.txt
==== tests/cases/compiler/ParameterList4.ts (1 errors) ====
    function F(public A) {
               ~~~~~~
!!! ParameterList4.ts(1,12): error TS2246: A parameter property is only allowed in a constructor implementation.
    }